# LawSaw

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.postgres-pgvector  Dockerfile.redis  Dockerfile.web  Dockerfile.worker  README.md  deny.toml  docker-compose.enterprise.yml  docker-compose.yml  list_sessions.js  package-lock.json  package.json  snap-articles-functional.yml  start-dev-bypass-proxy.bat
.github/workflows/: cd.yml  ci.yml  deploy.yml
apps/web/: biome.json  middleware.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  run-a5-runtime-check.mjs  tsconfig.tsbuildinfo  vitest.config.ts
config/: default.toml  mcp-config.example.json
crates/law-eye-ai/: Cargo.toml
crates/law-eye-ai/src/: authority.rs  classify.rs  domain.rs  embedding.rs  entity.rs  gateway.rs  importance.rs  lib.rs  rerank.rs  risk.rs  sentiment.rs  service.rs  summarize.rs  tags.rs  telemetry.rs  types.rs
crates/law-eye-ai/tests/: ai_tests.rs
crates/law-eye-api/: Cargo.toml
crates/law-eye-api/src/: auth.rs  error.rs  main.rs  openapi.rs  pagination.rs  state.rs
crates/law-eye-api/src/middleware/: auth_guard.rs  authz.rs  csrf.rs  idempotency.rs  mod.rs  rate_limit.rs  request_id.rs
crates/law-eye-api/src/routes/: admin_ai_governance.rs  admin_authz.rs  admin_dashboard.rs  admin_insights_reactions.rs  admin_rbac.rs  ai.rs  ai_usage_admin.rs  apikeys.rs  article_pins.rs  articles.rs  audit.rs  auth.rs  authz.rs  banners.rs  categories.rs  channels.rs  feedbacks.rs  health.rs  knowledge.rs  me.rs  mod.rs  notifications.rs  objects.rs  openapi.rs  push.rs  reactions.rs  report_subscriptions.rs  search.rs  sources.rs  super_tenants.rs  system_metrics.rs  users.rs  webhooks.rs
crates/law-eye-api/src/routes/knowledge/: dto.rs  handlers.rs  mod.rs  permissions.rs  queries.rs
crates/law-eye-api/src/routes/reports/: dto.rs  handlers.rs  mod.rs
crates/law-eye-api/src/routes/statistics/: dto.rs  handlers.rs  mod.rs
crates/law-eye-api/src/routes/tenants/: dto.rs  handlers.rs  mod.rs
crates/law-eye-common/: Cargo.toml
crates/law-eye-common/src/: cache.rs  circuit_breaker.rs  config.rs  config_runtime.rs  egress.rs  embedding.rs  env.rs  error.rs  lib.rs  schedule.rs  vault.rs
crates/law-eye-core/: Cargo.toml
crates/law-eye-core/src/: ai_governance.rs  ai_usage.rs  apikey.rs  article.rs  article_pin.rs  article_read.rs  audit.rs  auth_mfa.rs  auth_oauth.rs  authz.rs  banner.rs  category.rs  channel.rs  crawl_log.rs  domain_event.rs  email_verification.rs  feedback.rs  knowledge.rs  lib.rs  object.rs  password_reset.rs  push.rs  rag.rs  role_tier.rs  source.rs  statistics.rs  tenant.rs  user.rs  webhook.rs
crates/law-eye-core/src/article/: service.rs
crates/law-eye-core/src/email/: mod.rs  template.rs
crates/law-eye-core/src/reaction/: mod.rs  model.rs  repo.rs  service.rs
crates/law-eye-core/src/report/: aggregator.rs  mod.rs  service.rs  subscription_service.rs  template_service.rs  types.rs
crates/law-eye-core/src/report/exporter/: chart.rs  docx.rs  html.rs  mod.rs  pdf.rs
crates/law-eye-crawler/: Cargo.toml
crates/law-eye-crawler/examples/: integration_test.rs  public_source_probe.rs  test_rss.rs  test_spider.rs
crates/law-eye-crawler/src/: browser.rs  encoding.rs  lib.rs  orchestrator.rs  pipeline.rs  rss.rs  spider.rs
crates/law-eye-crawler/src/adapters/: government.rs  mod.rs  profiles.rs  registry.rs  rss_adapter.rs  spider_adapter.rs
crates/law-eye-crawler/src/anti_crawl/: headers.rs  mod.rs  rate_limiter.rs  robots.rs  user_agent.rs
crates/law-eye-crawler/src/incremental/: concurrency.rs  conditional.rs  content_hash.rs  mod.rs  pagination.rs  sitemap.rs
crates/law-eye-crawler/src/observability/: crawl_logger.rs  crawl_metrics.rs  mod.rs
crates/law-eye-crawler/src/stages/: ai_enrichment.rs  cleaning.rs  dedup.rs  metadata.rs  mod.rs  quality.rs
crates/law-eye-crawler/tests/: e2e_regression_tests.rs  pipeline_tests.rs  rss_tests.rs
crates/law-eye-db/: Cargo.toml
crates/law-eye-db/migrations/: 001_initial.sql  002_vectors.sql  003_users.sql  004_knowledge_graph.sql  005_feedbacks.sql  006_tenants.sql  007_rls_enforcement.sql  008_feedbacks_encryption.sql  009_audit_logs_tamper_proof.sql  010_objects.sql  011_audit_logs_block_truncate.sql  012_role_permissions_apikeys_manage.sql  013_password_reset_tokens.sql  014_role_permissions_v2_6_policy.sql  015_articles_version_soft_delete.sql  016_soft_delete_baseline.sql  018_web_push_subscriptions.sql  019_email_verification_tokens.sql  020_queue_outbox.sql  021_idempotency_keys.sql  022_audit_logs_event_version.sql  023_objects_purge_state.sql  024_row_versions.sql  025_webhook_endpoints_events.sql  026_auth_oauth_sso_mfa_totp.sql  027_sources_upsert_unique.sql  028_tenant_scoped_roles_sessions.sql  029_domain_events.sql  030_crawler_enhancement.sql  031_source_type_expand_and_seed.sql  032_rls_complete_coverage.sql  033_reports.sql  034_index_optimization.sql  035_tenant_quotas.sql  036_tenant_config_rls.sql  037_jsonb_not_null.sql  038_auth_compatible_rls.sql  039_auth_registration_rls.sql  040_apikeys_rls_split.sql  041_fix_broken_indexes_and_session_tenants_update.sql  (+40 more)
crates/law-eye-db/src/: lib.rs  models.rs
crates/law-eye-mcp/: Cargo.toml
crates/law-eye-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/law-eye-queue/: Cargo.toml
crates/law-eye-queue/src/: lib.rs
crates/law-eye-worker/: Cargo.toml
crates/law-eye-worker/src/: main.rs
docs/: COMPLETION-REPORT.md  DEPLOYMENT.md  README.md  RELEASE-CHECKLIST.md
n8n/: README.md
prompt/: audit-report.md  fix-tasks.md
prompts/: DESIGN_HANDBOOK.md  NEXT_ROUND_LOCAL_RUNBOOK.md  RC2_ENTERPRISE_IMPROVEMENT_STANDARD.md  checkpoint-2026-02-10-cleanup-report.md  prompt.md  🏛️ 法眼 (Law Eye) 宏观架构蓝图.md
prototype/: app.html
resource/: DESIGN_HANDBOOK.md  openapi.v1.json  🏛️ 法眼 (Law Eye) 宏观架构蓝图.md
scripts/: codex-resume-launcher.js  codex-session.ps1  dev_seed_qa_test.sh  i18n-add-keys.mjs  install-codex-resume-fix.ps1  uninstall-codex-resume-fix.ps1
(+589 files in other folders)
