[package]
name = "law-eye-ai"
version.workspace = true
edition.workspace = true

[dependencies]
law-eye-common = { path = "../law-eye-common" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# AI
async-openai.workspace = true
tiktoken-rs.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
