[package]
name = "law-eye-core"
version.workspace = true
edition.workspace = true

[dependencies]
law-eye-common = { path = "../law-eye-common" }
law-eye-db = { path = "../law-eye-db" }
law-eye-ai = { path = "../law-eye-ai" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
argon2.workspace = true
rand.workspace = true
futures.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-types.workspace = true
base64.workspace = true
hmac.workspace = true
sha1 = "0.10"
regex = "1.11"
urlencoding = "2.1"
reqwest.workspace = true
tera.workspace = true
docx-rs.workspace = true
plotters.workspace = true
plotters-svg.workspace = true

[dev-dependencies]
async-trait.workspace = true
