[package]
name = "law-eye-crawler"
version.workspace = true
edition.workspace = true

[dependencies]
law-eye-common = { path = "../law-eye-common" }
law-eye-db = { path = "../law-eye-db" }
law-eye-ai = { path = "../law-eye-ai" }
reqwest.workspace = true
feed-rs.workspace = true
scraper.workspace = true
tokio.workspace = true
url.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex = "1.11"
once_cell = "1.19"
encoding_rs.workspace = true
async-trait.workspace = true
rand.workspace = true
metrics.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
feed-rs.workspace = true
tracing-subscriber = { workspace = true }
anyhow.workspace = true
cron.workspace = true
chrono = { workspace = true }
