[package]
name = "law-eye-queue"
version.workspace = true
edition.workspace = true

[dependencies]
law-eye-common = { path = "../law-eye-common" }
deadpool-redis.workspace = true
redis.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
