[package]
name = "law-eye-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "law-eye-worker"
path = "src/main.rs"

[dependencies]
law-eye-common = { path = "../law-eye-common" }
law-eye-db = { path = "../law-eye-db" }
law-eye-core = { path = "../law-eye-core" }
law-eye-crawler = { path = "../law-eye-crawler" }
law-eye-queue = { path = "../law-eye-queue" }
law-eye-ai = { path = "../law-eye-ai" }

tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest.workspace = true
anyhow.workspace = true
base64.workspace = true
sha2.workspace = true
hmac.workspace = true
chrono.workspace = true
cron.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
